# The-Email-Triage-1

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
graders/: __init__.py  archive_clutter.py  categorize_inbox.py  prioritize_urgent.py
server/: app.py
src/: __init__.py  environment.py  models.py
